fix on search achievement
