# resource/openapi/api-spec.yaml
@@ -276,11 +276,18 @@ paths:
             schema:
               type: object
               required:
-                - accessToken
+                - type
+                - token
               properties:
-                accessToken:
+                type:
                   type: string
-                  description: Id token returned from Google
+                  enum:
+                    - Web
+                    - Android
+                    - iOS
+                token:
+                  type: string
+                  description: Access token or Id token returned from Google
       responses:
         '200':
           description: JWT token returned on successful login
